# OpenGL

./: .clang-format  CMakeLists.txt
res/: resources.json
res/shaders/: fSprite.glsl  fragment.glsl  vSprite.glsl  vertex.glsl
src/: main.cpp
src/Game/: Game.cpp  Game.h  Tank.cpp  Tank.h
src/Game/GameObjects/: BrickWall.cpp  BrickWall.h  IGameObject.cpp  IGameObject.h  Level.cpp  Level.h  Tank.cpp  Tank.h
src/Renderer/: AnimatedSprite.cpp  AnimatedSprite.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  SpriteAnimator.cpp  SpriteAnimator.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexArrayLayout.cpp  VertexArrayLayout.h  VertexBuffer.cpp  VertexBuffer.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
src/Tools/: Tools.h
